# WCommander

./: .gitignore  BUILD_PLAN.md  CHANGELOG.md  FUTURE_IDEAS.md  README.md  SPEC.md  SPIKE_NOTES.md  pyproject.toml  run_app.py
docs/superpowers/specs/: 2026-05-01-command-bar-design.md
spikes/: flet_list_spike.py
src/multipane_commander/: __init__.py  app.py  bootstrap.py  log.py  platform.py
src/multipane_commander/archive/: __init__.py  capabilities.py
src/multipane_commander/config/: load.py  model.py
src/multipane_commander/domain/: entries.py
src/multipane_commander/services/: bookmarks.py  undo.py
src/multipane_commander/state/: model.py  store.py
src/multipane_commander/terminal/: __init__.py  ansi.py  backends.py  session.py
src/multipane_commander/ui/: ai_chat.py  ai_palette.py  ai_pane.py  claude_terminal.py  command_bar.py  dialogs.py  find_files_dialog.py  folder_browser.py  function_key_bar.py  jobs_view.py  main_window.py  multi_rename_dialog.py  pane_view.py  quick_view.py  (+5 more)
tests/: conftest.py  test_ai_availability.py  test_ai_can_use_tool.py  test_ai_chat.py  test_ai_config.py  test_ai_integration.py  test_ai_palette.py  test_ai_pane.py  test_ai_runner.py  test_ai_sandbox.py  test_archive_fs.py  test_bookmarks.py  test_command_bar.py  test_config_store.py  test_drag_drop.py  test_e2e_scenarios.py  test_keyboard_shortcuts.py  test_local_fs.py  test_pane_sorting.py  test_platform.py  test_quick_view.py  test_smoke.py  test_state_store.py  test_terminal_ansi.py  test_terminal_dock.py  test_terminal_session.py  test_terminal_surface.py
(+12 files in other folders)
